<resources>
    <string name="app_name">BigTicTacToe</string>

    <!--Home-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_playBtnTxt">Play!</string>
    <string name="home_settingsBtnTxt">Settings</string>
    <string name="home_aboutBtnTxt">About</string>
    <string name="home_aboutTxt">Early prototype made by Matthew McParland. Designed as a learning experience. Message MatthewMcP on Github.</string>

    <!--Difficulty-->
    <string name="title_activity_choose_difficulty">ChooseDifficultyActivity</string>
    <string name="difficulty_easyAI_Btn">Dumb Dora</string>
    <string name="difficulty_mediumAI_Btn">Average Alex</string>
    <string name="difficulty_hardAI_Btn">Mighty Marvin</string>
    <string name="difficulty_randomAI_Btn">Roger</string>

    <!--Game-->
    <string name="title_activity_single_game">SingleGameActivity</string>
    <string name="XConst" translatable="false">X</string>
    <string name="OConst" translatable="false">O</string>
    <string name="ResetBoard">Reset</string>

    <!--Settings-->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_resetStatisticsBtnTxt">Reset Statistics</string>

    <!--About-->
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_txt">
        This was designed as a learning experience, any suggestions please send them to Hilary Clinton via email and I will see them.
        \n\n\nCode is on github and the license will be here once I learn about what the entails.
        \n\n\nHi Claire
        \n\n\nBest Regards,
        \nM
        </string>

    <!--Shared-->
    <string name="shared_homeBtnTxt">Home</string>

    <!--PlayerPreferences-->
    <string name="preference_player_settings">Players Preferences</string>
    <string name="preference_player_settings_summary">Players Preferences may be edited, just click!</string>
    <string name="preference_playername">Players Name</string>
    <string name="preference_playername_Default">Player 1</string>
    <string name="preference_playername_DialogTxt">Please enter players new name</string>
    <string name="preference_playername_Key">pref_name_key</string>
    <string name="preference_playername_Summary">Players preferred name</string>

    <!--StatisticPreferences-->
    <string name="preference_statistics_settings">Statistics</string>
    <string name="preference_statistics_settings_summary">The below statistics may not be edited.</string>
    <string name="preference_gameswon">Games won</string>
    <string name="preference_gameswon_key">pref_gameswon_key</string>
    <string name="preference_gameslost">Games lost</string>
    <string name="preference_gameslost_key">pref_gameslost_key</string>
    <string name="preference_gamesdrawn">Games drawn</string>
    <string name="preference_gamesdrawn_key">pref_gamesdrawn_key</string>

    <!--ComputerNames-->
    <string name="computername_easy">Dora</string>
    <string name="computername_mediun">Alex</string>
    <string name="computername_hard">Marvin</string>
    <string name="computername_random">Roger</string>

    <!--EasyWinMessages-->
    <string-array name="message_computerwins_easy_array">
        <item>...Where you even trying to win?</item>
        <item>Surely THAT was a misclick?</item>
        <item>Aww, I am sure you will do better next time</item>
    </string-array>
    <!--MediumWinMessages-->
    <string-array name="message_computerwins_medium_array">
        <item>...Where you even trying to win?</item>
        <item>%1$s is getting bored of your bad play...</item>
        <item>The best player won</item>
    </string-array>
    <!--HardWinMessages-->
    <string-array name="message_computerwins_hard_array">
        <item>The Almighty %1$s wins!</item>
        <item>The Undefeatable %1$s wins!</item>
        <item>The best player won</item>
        <item>EXTERMINATE</item>
    </string-array>
    <!--RandomWinMessages-->
    <string-array name="message_computerwins_random_array">
        <item>Help me Obi-Wan Kenobi</item>
        <item>Beep boop beep</item>
        <item>EXTERMINATE</item>
    </string-array>

    <!--IntentKeys-->
    <string name="computerDifficulty_Key">ComputerDifficulty</string>


</resources>
