<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    tools:context="com.dev.mcp.matthew.bigtictactoe.Activities.ChooseDifficultyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <Button
            android:id="@+id/difficulty_easy_btn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/difficulty_easyAI_Btn"
            android:textColor="@color/TextColor1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <Button
            android:id="@+id/difficulty_medium_btn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/difficulty_mediumAI_Btn"
            android:textColor="@color/TextColor1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <Button
            android:id="@+id/difficulty_hard_btn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/difficulty_hardAI_Btn"
            android:textColor="@color/TextColor1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <Button
            android:id="@+id/difficulty_random_btn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/difficulty_randomAI_Btn"
            android:textColor="@color/TextColor1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <Button
            android:id="@+id/difficulty_home_btn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/shared_homeBtnTxt"
            android:textColor="@color/TextColor1" />
    </LinearLayout>
</LinearLayout>
