<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    tools:context=".FullscreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_textview"
            android:gravity="center"
            android:text="@string/home_aboutTxt"
            android:textColor="@color/White" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <Button
            android:id="@+id/home_play_btn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/home_playBtnTxt"
            android:textColor="@color/TextColor1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <Button
            android:id="@+id/home_settings_btn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/home_settingsBtnTxt"
            android:textColor="@color/TextColor1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <Button
            android:id="@+id/home_about_btn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/home_aboutBtnTxt"
            android:textColor="@color/TextColor1" />
    </LinearLayout>


</LinearLayout>
