<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_game"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".FullscreenGame">

    <TableLayout
        android:id="@+id/Grid"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#4da64d"
        android:keepScreenOn="true">

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/cell11"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cell12"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cell13"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/Row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/cell21"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cell22"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cell23"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/Row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/cell31"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cell32"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cell33"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4d4d4d"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/singlegame_radioBtn_X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/XConst" />

            <RadioButton
                android:id="@+id/singlegame_radioBtn_O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OConst" />
        </RadioGroup>

        <TextView
            android:id="@+id/singlegame_reset"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ResetBoard"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/thing"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>